--- a/ChildViewControllerInScrollView/SBOnly.storyboard
+++ b/ChildViewControllerInScrollView/SBOnly.storyboard
@@ -80,7 +80,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="1611"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Fro-2O-Zps">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="834"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="895"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Second" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u2r-8d-Xfw">
                                                 <rect key="frame" x="158.5" y="20" width="58.5" height="21"/>
@@ -97,7 +97,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SWh-6M-PYO">
-                                                <rect key="frame" x="20" y="298" width="335" height="30"/>
+                                                <rect key="frame" x="20" y="359" width="335" height="30"/>
                                                 <color key="backgroundColor" red="0.92143100499999997" green="0.92145264149999995" blue="0.92144101860000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <state key="normal" title="Middle"/>
                                                 <connections>
@@ -105,7 +105,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BYo-9b-mmJ">
-                                                <rect key="frame" x="20" y="784" width="335" height="30"/>
+                                                <rect key="frame" x="20" y="845" width="335" height="30"/>
                                                 <color key="backgroundColor" red="0.92143100499999997" green="0.92145264149999995" blue="0.92144101860000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <state key="normal" title="Bottom"/>
                                                 <connections>
@@ -113,7 +113,7 @@
                                                 </connections>
                                             </button>
                                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="yq5-LX-cG4">
-                                                <rect key="frame" x="20" y="476" width="335" height="128"/>
+                                                <rect key="frame" x="20" y="537" width="335" height="128"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="128" id="C0I-Se-lFy"/>
@@ -123,8 +123,11 @@
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                             </textView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="otR-64-197">
-                                                <rect key="frame" x="20" y="132" width="335" height="101.5"/>
-                                                <string key="text">Note: When set up this way, we're using auto-layout / constraints on the elements *contained* in the view, so it will size the "contentView" automatically *and* it will set the scrollview's content size automatically.</string>
+                                                <rect key="frame" x="20" y="132" width="335" height="162.5"/>
+                                                <color key="backgroundColor" red="0.45138680930000002" green="0.99309605359999997" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <string key="text">Note: When set up this way, we're using auto-layout / constraints on the elements *contained* in the view, so it will size the "contentView" automatically *and* it will set the scrollview's content size automatically.
+
+To see it in action, each tap of the Top button will add 5 lines of text to this label.</string>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -172,6 +175,9 @@
                         <viewLayoutGuide key="safeArea" id="47W-Xd-IVn"/>
                     </view>
                     <size key="freeformSize" width="375" height="1611"/>
+                    <connections>
+                        <outlet property="theProofLabel" destination="otR-64-197" id="3iL-vI-Lb6"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BwE-Ul-jTh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
